draco_trunk/llvm_c_api/core_h.ads


  -- Operations on struct types
   function LLVMStructTypeInContext
     (C            : LLVMContextRef;
      ElementTypes : System.Address;
      ElementCount : unsigned;
      Packed       : LLVMBool) return LLVMTypeRef;  -- Core.h:388
   pragma Import (C, LLVMStructTypeInContext, "LLVMStructTypeInContext");

   function LLVMStructType
     (ElementTypes : System.Address;
      ElementCount : unsigned;
      Packed       : LLVMBool) return LLVMTypeRef;  -- Core.h:390
   pragma Import (C, LLVMStructType, "LLVMStructType");

   function LLVMCountStructElementTypes (StructTy : LLVMTypeRef) return unsigned;  -- Core.h:392
   pragma Import (C, LLVMCountStructElementTypes, "LLVMCountStructElementTypes");

   procedure LLVMGetStructElementTypes (StructTy : LLVMTypeRef; Dest : System.Address);  -- Core.h:393
   pragma Import (C, LLVMGetStructElementTypes, "LLVMGetStructElementTypes");

   function LLVMIsPackedStruct (StructTy : LLVMTypeRef) return LLVMBool;  -- Core.h:394
   pragma Import (C, LLVMIsPackedStruct, "LLVMIsPackedStruct");

  -- Operations on union types
   function LLVMUnionTypeInContext
     (C            : LLVMContextRef;
      ElementTypes : System.Address;
      ElementCount : unsigned) return LLVMTypeRef;  -- Core.h:397
   pragma Import (C, LLVMUnionTypeInContext, "LLVMUnionTypeInContext");

   function LLVMUnionType (ElementTypes : System.Address; 
                           ElementCount : unsigned) return LLVMTypeRef;  -- Core.h:399
   pragma Import (C, LLVMUnionType, "LLVMUnionType");

   function LLVMCountUnionElementTypes (UnionTy : LLVMTypeRef) return unsigned;  -- Core.h:400
   pragma Import (C, LLVMCountUnionElementTypes, "LLVMCountUnionElementTypes");

   procedure LLVMGetUnionElementTypes (UnionTy : LLVMTypeRef; Dest : System.Address);  -- Core.h:401
   pragma Import (C, LLVMGetUnionElementTypes, "LLVMGetUnionElementTypes");

  -- Operations on array, pointer, and vector types (sequence types)
   function LLVMArrayType (ElementType  : LLVMTypeRef; 
                           ElementCount : unsigned) return LLVMTypeRef;  -- Core.h:404
   pragma Import (C, LLVMArrayType, "LLVMArrayType");

   function LLVMPointerType (ElementType  : LLVMTypeRef; 
                             AddressSpace : unsigned) return LLVMTypeRef;  -- Core.h:405
   pragma Import (C, LLVMPointerType, "LLVMPointerType");

   function LLVMVectorType (ElementType  : LLVMTypeRef; 
                            ElementCount : unsigned) return LLVMTypeRef;  -- Core.h:406
   pragma Import (C, LLVMVectorType, "LLVMVectorType");

   function LLVMGetElementType (Ty : LLVMTypeRef) return LLVMTypeRef;  -- Core.h:408
   pragma Import (C, LLVMGetElementType, "LLVMGetElementType");

   function LLVMGetArrayLength (ArrayTy : LLVMTypeRef) return unsigned;  -- Core.h:409
   pragma Import (C, LLVMGetArrayLength, "LLVMGetArrayLength");

   function LLVMGetPointerAddressSpace (PointerTy : LLVMTypeRef) return unsigned;  -- Core.h:410
   pragma Import (C, LLVMGetPointerAddressSpace, "LLVMGetPointerAddressSpace");

   function LLVMGetVectorSize (VectorTy : LLVMTypeRef) return unsigned;  -- Core.h:411
   pragma Import (C, LLVMGetVectorSize, "LLVMGetVectorSize");

  -- Operations on other types
   function LLVMVoidTypeInContext (C : LLVMContextRef) return LLVMTypeRef;  -- Core.h:414
   pragma Import (C, LLVMVoidTypeInContext, "LLVMVoidTypeInContext");

   function LLVMLabelTypeInContext (C : LLVMContextRef) return LLVMTypeRef;  -- Core.h:415
   pragma Import (C, LLVMLabelTypeInContext, "LLVMLabelTypeInContext");

   function LLVMOpaqueTypeInContext (C : LLVMContextRef) return LLVMTypeRef;  -- Core.h:416
   pragma Import (C, LLVMOpaqueTypeInContext, "LLVMOpaqueTypeInContext");

   function LLVMVoidType return LLVMTypeRef;  -- Core.h:418
   pragma Import (C, LLVMVoidType, "LLVMVoidType");

   function LLVMLabelType return LLVMTypeRef;  -- Core.h:419
   pragma Import (C, LLVMLabelType, "LLVMLabelType");

   function LLVMOpaqueType return LLVMTypeRef;  -- Core.h:420
   pragma Import (C, LLVMOpaqueType, "LLVMOpaqueType");

  -- Operations on type handles
   function LLVMCreateTypeHandle (PotentiallyAbstractTy : LLVMTypeRef) return LLVMTypeHandleRef;  -- Core.h:423
   pragma Import (C, LLVMCreateTypeHandle, "LLVMCreateTypeHandle");

   procedure LLVMRefineType (AbstractTy : LLVMTypeRef; 
                             ConcreteTy : LLVMTypeRef);  -- Core.h:424
   pragma Import (C, LLVMRefineType, "LLVMRefineType");

   function LLVMResolveTypeHandle (TypeHandle : LLVMTypeHandleRef) return LLVMTypeRef;  -- Core.h:425
   pragma Import (C, LLVMResolveTypeHandle, "LLVMResolveTypeHandle");

   procedure LLVMDisposeTypeHandle (TypeHandle : LLVMTypeHandleRef);  -- Core.h:426
   pragma Import (C, LLVMDisposeTypeHandle, "LLVMDisposeTypeHandle");

  --===-- Values ------------------------------------------------------------===
  -- The bulk of LLVM's object model consists of values, which comprise a very
  -- * rich type hierarchy.
  --

  -- Operations on all values
   function LLVMTypeOf (arg1 : LLVMValueRef) return LLVMTypeRef;  -- Core.h:436
   pragma Import (C, LLVMTypeOf, "LLVMTypeOf");

   function LLVMGetValueName (arg1 : LLVMValueRef) return Interfaces.C.Strings.chars_ptr;  -- Core.h:437
   pragma Import (C, LLVMGetValueName, "LLVMGetValueName");

   procedure LLVMSetValueName (arg1 : LLVMValueRef; arg2 : Interfaces.C.Strings.chars_ptr);  -- Core.h:438
   pragma Import (C, LLVMSetValueName, "LLVMSetValueName");

   procedure LLVMDumpValue (arg1 : LLVMValueRef);  -- Core.h:439
   pragma Import (C, LLVMDumpValue, "LLVMDumpValue");

   procedure LLVMReplaceAllUsesWith (arg1 : LLVMValueRef; arg2 : LLVMValueRef);  -- Core.h:440
   pragma Import (C, LLVMReplaceAllUsesWith, "LLVMReplaceAllUsesWith");

   function LLVMHasMetadata (arg1 : LLVMValueRef) return int;  -- Core.h:441
   pragma Import (C, LLVMHasMetadata, "LLVMHasMetadata");

   function LLVMGetMetadata (arg1 : LLVMValueRef; arg2 : unsigned) return LLVMValueRef;  -- Core.h:442
   pragma Import (C, LLVMGetMetadata, "LLVMGetMetadata");

   procedure LLVMSetMetadata
     (arg1 : LLVMValueRef;
      arg2 : unsigned;
      arg3 : LLVMValueRef);  -- Core.h:443
   pragma Import (C, LLVMSetMetadata, "LLVMSetMetadata");

  -- Conversion functions. Return the input value if it is an instance of the
  --   specified class, otherwise NULL. See llvm::dyn_cast_or_null<>.

   function LLVMIsAArgument (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:448
   pragma Import (C, LLVMIsAArgument, "LLVMIsAArgument");

   function LLVMIsABasicBlock (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:449
   pragma Import (C, LLVMIsABasicBlock, "LLVMIsABasicBlock");

   function LLVMIsAInlineAsm (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:450
   pragma Import (C, LLVMIsAInlineAsm, "LLVMIsAInlineAsm");

   function LLVMIsAUser (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:451
   pragma Import (C, LLVMIsAUser, "LLVMIsAUser");

   function LLVMIsAConstant (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:452
   pragma Import (C, LLVMIsAConstant, "LLVMIsAConstant");

   function LLVMIsAConstantAggregateZero (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:453
   pragma Import (C, LLVMIsAConstantAggregateZero, "LLVMIsAConstantAggregateZero");

   function LLVMIsAConstantArray (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:454
   pragma Import (C, LLVMIsAConstantArray, "LLVMIsAConstantArray");

   function LLVMIsAConstantExpr (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:455
   pragma Import (C, LLVMIsAConstantExpr, "LLVMIsAConstantExpr");

   function LLVMIsAConstantFP (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:456
   pragma Import (C, LLVMIsAConstantFP, "LLVMIsAConstantFP");

   function LLVMIsAConstantInt (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:457
   pragma Import (C, LLVMIsAConstantInt, "LLVMIsAConstantInt");

   function LLVMIsAConstantPointerNull (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:458
   pragma Import (C, LLVMIsAConstantPointerNull, "LLVMIsAConstantPointerNull");

   function LLVMIsAConstantStruct (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:459
   pragma Import (C, LLVMIsAConstantStruct, "LLVMIsAConstantStruct");

   function LLVMIsAConstantVector (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:460
   pragma Import (C, LLVMIsAConstantVector, "LLVMIsAConstantVector");

   function LLVMIsAGlobalValue (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:461
   pragma Import (C, LLVMIsAGlobalValue, "LLVMIsAGlobalValue");

   function LLVMIsAFunction (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:462
   pragma Import (C, LLVMIsAFunction, "LLVMIsAFunction");

   function LLVMIsAGlobalAlias (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:463
   pragma Import (C, LLVMIsAGlobalAlias, "LLVMIsAGlobalAlias");

   function LLVMIsAGlobalVariable (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:464
   pragma Import (C, LLVMIsAGlobalVariable, "LLVMIsAGlobalVariable");

   function LLVMIsAUndefValue (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:465
   pragma Import (C, LLVMIsAUndefValue, "LLVMIsAUndefValue");

   function LLVMIsAInstruction (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:466
   pragma Import (C, LLVMIsAInstruction, "LLVMIsAInstruction");

   function LLVMIsABinaryOperator (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:467
   pragma Import (C, LLVMIsABinaryOperator, "LLVMIsABinaryOperator");

   function LLVMIsACallInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:468
   pragma Import (C, LLVMIsACallInst, "LLVMIsACallInst");

   function LLVMIsAIntrinsicInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:469
   pragma Import (C, LLVMIsAIntrinsicInst, "LLVMIsAIntrinsicInst");

   function LLVMIsADbgInfoIntrinsic (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:470
   pragma Import (C, LLVMIsADbgInfoIntrinsic, "LLVMIsADbgInfoIntrinsic");

   function LLVMIsADbgDeclareInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:471
   pragma Import (C, LLVMIsADbgDeclareInst, "LLVMIsADbgDeclareInst");

   function LLVMIsAEHSelectorInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:472
   pragma Import (C, LLVMIsAEHSelectorInst, "LLVMIsAEHSelectorInst");

   function LLVMIsAMemIntrinsic (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:473
   pragma Import (C, LLVMIsAMemIntrinsic, "LLVMIsAMemIntrinsic");

   function LLVMIsAMemCpyInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:474
   pragma Import (C, LLVMIsAMemCpyInst, "LLVMIsAMemCpyInst");

   function LLVMIsAMemMoveInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:475
   pragma Import (C, LLVMIsAMemMoveInst, "LLVMIsAMemMoveInst");

   function LLVMIsAMemSetInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:476
   pragma Import (C, LLVMIsAMemSetInst, "LLVMIsAMemSetInst");

   function LLVMIsACmpInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:477
   pragma Import (C, LLVMIsACmpInst, "LLVMIsACmpInst");

   function LLVMIsAFCmpInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:478
   pragma Import (C, LLVMIsAFCmpInst, "LLVMIsAFCmpInst");

   function LLVMIsAICmpInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:479
   pragma Import (C, LLVMIsAICmpInst, "LLVMIsAICmpInst");

   function LLVMIsAExtractElementInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:480
   pragma Import (C, LLVMIsAExtractElementInst, "LLVMIsAExtractElementInst");

   function LLVMIsAGetElementPtrInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:481
   pragma Import (C, LLVMIsAGetElementPtrInst, "LLVMIsAGetElementPtrInst");

   function LLVMIsAInsertElementInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:482
   pragma Import (C, LLVMIsAInsertElementInst, "LLVMIsAInsertElementInst");
